# pylops-mpi

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  adding.html  benchmarking.html  changelog.html  contributing.html  credits.html  environment-dev.yml  environment.yml  genindex.html  gpu.html  index.html  installation.html  mpi_examples.sh  objects.inv  pyproject.toml  requirements-dev.txt  requirements-fft.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html
.doctrees/: adding.doctree  benchmarking.doctree  changelog.doctree  contributing.doctree  credits.doctree  gpu.doctree  index.doctree  installation.doctree  sg_execution_times.doctree
_modules/: index.html
_sources/: changelog.rst.txt  gpu.rst.txt  installation.rst.txt  sg_execution_times.rst.txt
api/: index.html
docs/: modules.rst  pylops_mpi.rst
examples/: README.rst  distributed_array.py  matixmul.py  matrixmul.py  mpi_examples.sh  plot_cgls.py  plot_derivative.py  plot_distributed_array.py  plot_ffts.py  plot_halo.py  plot_halo1d.py  plot_halo_nsconv.py  plot_matrixmult.py  plot_mdc.py  plot_mpilinop.py  plot_nonstatconv.py  plot_post_stack_inversion.py  plot_prox.py  plot_stacked_array.py  plot_stacking.py  plot_summamatrixmult.py
gallery/: index.html  plot_cgls.html  plot_derivative.html  plot_distributed_array.html  plot_ffts.html  plot_halo.html  plot_matrixmult.html  plot_mdc.html  plot_mpilinop.html  plot_nonstatconv.html  plot_post_stack_inversion.html  plot_stacked_array.html  plot_stacking.html  plot_summamatrixmult.html  (+1 more)
joss/: paper.bib  (+1 more)
(+233 files in other folders)
